--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -25,6 +25,8 @@
     font-weight: 700;
     font-size: 24px;
     line-height: 32px;
+    text-decoration: none;
+    color: var(--white);
   }
 
   // .nav__right
